--- a/vue-shop/src/styles/main.scss
+++ b/vue-shop/src/styles/main.scss
@@ -1,3 +1,6 @@
 body {
-
+    background-color: #f5f5f9;
+    font-size: 14px;
+    font-family: PingFangSC-Light,sans-serif;
+    line-height: 1.15;
 }
