flask项目基本框架

--- a/template_for_flask/adminshop/templates/base.html
+++ b/template_for_flask/adminshop/templates/base.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
 </head>
 <body>
-
+<h1>{{ context.hinfo }}</h1>
 </body>
 </html>
