--- a/template_for_flask/adminshop/templates/base.html
+++ b/template_for_flask/adminshop/templates/base.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
 </head>
 <body>
-<h1>{{ context.hinfo }}</h1>
+<h1>{{ context.hinfo }},用户：{{ context.user_name }}</h1>
+<h1>您的地址如下</h1>
+<ul>
+{% for temp in context.addresses %}
+    <li>{{ temp }}</li>
+{% endfor %}
+</ul>
 </body>
 </html>
